// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`document-library-preview-document renders a document previewer with alt attribute 1`] = `
<DocumentFragment>
  <div
    class="preview-file"
  >
    <div
      class="preview-file-container preview-file-max-height"
    >
      <img
        alt="alt text"
        class="preview-file-document preview-file-document-fit"
        src="http://localhost/document-images/?previewFileIndex=1"
      />
    </div>
    <div
      class="preview-toolbar-container"
    >
      <div
        class="floating-bar btn-group"
        role="group"
      >
        <div
          class="btn-group"
          role="group"
        >
          <button
            aria-label="click-to-jump-to-a-page"
            class="btn-floating-bar btn-floating-bar-text btn btn-primary"
            title="click-to-jump-to-a-page"
            type="button"
          >
            page 1 / 10
          </button>
        </div>
        <button
          aria-label="page-above"
          class="btn-floating-bar btn btn-monospaced btn-primary"
          disabled=""
          title="page-above"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-top"
            role="presentation"
          >
            <use
              href="#caret-top"
            />
          </svg>
        </button>
        <button
          aria-label="page-below"
          class="btn-floating-bar btn btn-monospaced btn-primary"
          title="page-below"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom"
            role="presentation"
          >
            <use
              href="#caret-bottom"
            />
          </svg>
        </button>
        <div
          class="separator-floating-bar"
        />
        <button
          aria-label="expand"
          class="btn-floating-bar btn btn-monospaced btn-primary"
          title="expand"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-full-size"
            role="presentation"
          >
            <use
              href="#full-size"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`document-library-preview-document renders a document previewer with nineteen pages and the fifth page rendered 1`] = `
<DocumentFragment>
  <div
    class="preview-file"
  >
    <div
      class="preview-file-container preview-file-max-height"
    >
      <img
        alt=""
        class="preview-file-document preview-file-document-fit"
        src="http://localhost/document-images/?previewFileIndex=5"
      />
    </div>
    <div
      class="preview-toolbar-container"
    >
      <div
        class="floating-bar btn-group"
        role="group"
      >
        <div
          class="btn-group"
          role="group"
        >
          <button
            aria-label="click-to-jump-to-a-page"
            class="btn-floating-bar btn-floating-bar-text btn btn-primary"
            title="click-to-jump-to-a-page"
            type="button"
          >
            page 5 / 19
          </button>
        </div>
        <button
          aria-label="page-above"
          class="btn-floating-bar btn btn-monospaced btn-primary"
          title="page-above"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-top"
            role="presentation"
          >
            <use
              href="#caret-top"
            />
          </svg>
        </button>
        <button
          aria-label="page-below"
          class="btn-floating-bar btn btn-monospaced btn-primary"
          title="page-below"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom"
            role="presentation"
          >
            <use
              href="#caret-bottom"
            />
          </svg>
        </button>
        <div
          class="separator-floating-bar"
        />
        <button
          aria-label="expand"
          class="btn-floating-bar btn btn-monospaced btn-primary"
          title="expand"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-full-size"
            role="presentation"
          >
            <use
              href="#full-size"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`document-library-preview-document renders a document previewer with ten pages and the first page rendered 1`] = `
<DocumentFragment>
  <div
    class="preview-file"
  >
    <div
      class="preview-file-container preview-file-max-height"
    >
      <img
        alt=""
        class="preview-file-document preview-file-document-fit"
        src="http://localhost/document-images/?previewFileIndex=1"
      />
    </div>
    <div
      class="preview-toolbar-container"
    >
      <div
        class="floating-bar btn-group"
        role="group"
      >
        <div
          class="btn-group"
          role="group"
        >
          <button
            aria-label="click-to-jump-to-a-page"
            class="btn-floating-bar btn-floating-bar-text btn btn-primary"
            title="click-to-jump-to-a-page"
            type="button"
          >
            page 1 / 10
          </button>
        </div>
        <button
          aria-label="page-above"
          class="btn-floating-bar btn btn-monospaced btn-primary"
          disabled=""
          title="page-above"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-top"
            role="presentation"
          >
            <use
              href="#caret-top"
            />
          </svg>
        </button>
        <button
          aria-label="page-below"
          class="btn-floating-bar btn btn-monospaced btn-primary"
          title="page-below"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom"
            role="presentation"
          >
            <use
              href="#caret-bottom"
            />
          </svg>
        </button>
        <div
          class="separator-floating-bar"
        />
        <button
          aria-label="expand"
          class="btn-floating-bar btn btn-monospaced btn-primary"
          title="expand"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-full-size"
            role="presentation"
          >
            <use
              href="#full-size"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
